feat: added responsive design

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <div id="content">
       <div id="texts-and-input">
-        <h1>Worlwide Purchase Access From Your Platinum Card</h1>
-        <p id="subtitle">Free upgrade option to our platinum services and get lifetime validity.</p>
+        <div id="texts">
+          <h1>Worlwide Purchase Access From Your Platinum Card</h1>
+          <p id="subtitle">Free upgrade option to our platinum services and get lifetime validity.</p>
+        </div>
 
         <div id="emailInput">
           <input type="text" placeholder="Your E-mail" />
